src/objects/Core_IPS_MAP_PAR__c.object
<CustomObject>
    <description>The MAP/PAR header object is used to capture details regarding IPS product access.  It can be created by a Support Org Admin (MAP - Managed Access Policy) for multiple accounts &amp; multiple products or it can be requested (PAR-Product Access Request) for a single account to have access to multiple products.

This object will have related Line Items that capture the unique Account/Supported Product/Support Org combinations.</description>
    <fields>
        <fullName>Core_Name__c</fullName>
        <description>Name of the MAP.  Not used by PAR.</description>
        <inlineHelpText>Naming Convention:   Org - Product/Platform Grouping - Geo - Team
(example:  &quot;DCG - Skylake - All - None&quot;)</inlineHelpText>
        <label>MAP Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Product_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique ID of the Support Org that owns this MAP/PAR record</description>
        <inlineHelpText>Unique ID of the Support Org that owns this MAP/PAR record</inlineHelpText>
        <label>Support Org</label>
        <referenceTo>Core_IPS_Product_Organization__c</referenceTo>
        <relationshipLabel>Product Access</relationshipLabel>
        <relationshipName>MAP_PARs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <description>MAP Status intended to allow for ACTIVE or INACTIVE values.  This will not be used in Release 1 but we expect it to drive functionality in release 2</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Submitter_Comments__c</fullName>
        <description>Used by PAR only.  This field captures the comments that the PAR creator enters on the PAR VF page.   We will not show these on the header but they get copied programmatically to all line items related to the header</description>
        <label>Submitter Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Support_Org_Name__c</fullName>
        <description>Name of the Support Org that owns this MAP/PAR record</description>
        <formula>Core_Product_Organization__r.Core_IPS_Support_Org_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Support Org that owns this MAP/PAR record</inlineHelpText>
        <label>Support Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_isPARRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean used by MAP/PAR VF page logic to determine if an asset should be created or not.   If we keep this, we should consider renaming it to a more useful name.</description>
        <label>isPARRequest</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Access</label>
    <listViews>
        <fullName>All_PAR_s</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Core_isPARRequest__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All PAR&apos;s</label>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_001_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Org 001</label>
        <queue>Core_IPS_Org_001</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_002_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Org 002</label>
        <queue>Core_IPS_Org_002</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_003_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Org 003</label>
        <queue>Core_IPS_Org_003</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_006_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Org 006</label>
        <queue>Core_IPS_Org_006</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_007_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Org 007</label>
        <queue>Core_IPS_Org_007</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_011_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS Org 011</label>
        <queue>Core_IPS_Org_011</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_012_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - CCG-CISD</label>
        <queue>Core_IPS_Org_012</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_013_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Data Center</label>
        <queue>Core_IPS_Org_013</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_014_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Server Platforms</label>
        <queue>Core_IPS_Org_014</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Core_IPS_Org_015_Core_IPS_MAP_PAR</fullName>
        <filterScope>Queue</filterScope>
        <label>IPS - Client RnD and Windows Software So</label>
        <queue>Core_IPS_Org_015</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IAR-{0000000000}</displayFormat>
        <label>Access Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Access</pluralLabel>
    <recordTypes>
        <fullName>Core_MAP</fullName>
        <active>true</active>
        <description>Used for MAP</description>
        <label>MAP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_PAR</fullName>
        <active>true</active>
        <description>Used for PAR</description>
        <label>PAR</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Core_Require_Record_Type_Value</fullName>
        <active>true</active>
        <description>Require that MAP/PAR have a record type value when being created. This will help prevent users from creating them via the OOTB screens.</description>
        <errorConditionFormula>RecordType.Name = NULL</errorConditionFormula>
        <errorMessage>No value supplied for Record Type.

Please use the [Create Product Access] button from Support Org or Account detail pages to create new Product Access records.</errorMessage>
    </validationRules>
</CustomObject>